# PyPlasmaOpt

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  setup.py
.github/workflows/: python-test.yml
cppplasmaopt/: biot_savart.h  biot_savart_B.cpp  biot_savart_B.h  biot_savart_all.cpp  biot_savart_by_dcoilcoeff_all.cpp  biot_savart_d2B_by_dXdX.cpp  biot_savart_d2B_by_dXdcoilcoeff.cpp  biot_savart_d2B_by_dXdcoilcoeff_via_chainrule.cpp  biot_savart_dB_by_dX.cpp  biot_savart_dB_by_dcoilcoeff.cpp  biot_savart_dB_by_dcoilcoeff_via_chainrule.cpp  main.cpp
examples/: ComputeBoozer.py  PlotQFM.ipynb  README.md  Surface_opt_test.py  ex_simple_deterministic.py  example2.py  example2_get_objective.py  example2_histcomparison.py  example2_plot.py  example2_simple.py  example3_get_objective.py  example3_plot.py  example3_simple.py  example_surfaces.py  example_surfaces2.py  generate_toroidal_guess.py  john_test_outputlog-rank0.txt  obfgsruns.sh  paperjobs.sh  problem2_objective.py  qfm_ncsx_example.py  runs.sh  surface.py  x_coord.txt  y_coord.txt  z_coord.txt
examples/output_1/: Jvals.txt  Jvals_individual.txt  dJvals.txt  log-rank0.txt  xmin.txt
examples/playground code/: QSF_test.py  Surface_normal_plot_test.py  john_objective.py  surfaces.py
examples/stochastic/: coilplot_stochastic.py  confinement.slurm  confinement_stochastic.py  confinement_stochastic_plot.py  confinement_stochastic_plot_3.py  iota_stochastic.py  iota_stochastic_plot.py  job.slurm  jobs_stochastic.sh  landscape_stochastic.py  mcconvergence_stochastic.py  minimizers_stochastic_plot.py  objective_stochastic.py  optimisation_stochastic.py  plot_stochastic.py  raytracing_stochastic.py  readme.md  riskaverse_stochastic_plot.py  surface.slurm  surface_stochastic.py  surface_stochastic_plot.py  tangent_map.py  tasks.txt
profiling/: dgamma_by_dphi_200.npy  gamma_200.npy  points_200.npy  profile_biot_savart.cpp  profile_biot_savart.py  profiling_biot_savart
pyplasmaopt/: __init__.py  biotsavart.py  coils.py  curve.py  cvar.py  finite_differences.py  grad_optimizer.py  helpers.py  innerproduct.py  logging.py  objective.py  poincareplot.py  problems.py  qfm_surface.py  quasi_symmetric_field.py  stochastic_gradient.py  stochastic_objective.py  tangent_map.py
pyplasmaopt/data/ncsx/: mgrid_c09r00_modularOnly.nc
tests/: test_biotsavart.py  test_coil_objectives.py  test_cppbinding.py  test_curve.py  test_cvar.py  test_matlabcomparison.py  test_ncsx.py  test_objectives.py  test_poincareplot.py  test_qfm_surface.py  test_quasi_symmetric_field.py  test_squaredmagneticfieldnormoncurve.py
